src/OpenCvSharpExtern/core_Mat.h

CVAPI(int) core_Mat_nGetPoint3d(cv::Mat *obj, int row, int col, cv::Point3d *vals, int valsLength)
{
    return internal_Mat_get<cv::Point3d>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetRect(cv::Mat *obj, int row, int col, cv::Rect *vals, int valsLength)
{
    return internal_Mat_get<cv::Rect>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(void) core_Mat_push_back_Mat(cv::Mat *self, cv::Mat *m)
{
    self->push_back(*m);
}
CVAPI(void) core_Mat_push_back_char(cv::Mat *self, char v)
{
    self->push_back(v);
}
CVAPI(void) core_Mat_push_back_uchar(cv::Mat *self, uchar v)
{
    self->push_back(v);
}
CVAPI(void) core_Mat_push_back_short(cv::Mat *self, short v)
{
    self->push_back(v);
}
CVAPI(void) core_Mat_push_back_ushort(cv::Mat *self, ushort v)
{
    self->push_back(v);
}
CVAPI(void) core_Mat_push_back_int(cv::Mat *self, int v)
{
    self->push_back(v);
}
CVAPI(void) core_Mat_push_back_float(cv::Mat *self, float v)
{
    self->push_back(v);
}
CVAPI(void) core_Mat_push_back_double(cv::Mat *self, double v)
{
    self->push_back(v);
}
CVAPI(void) core_Mat_push_back_Vec2b(cv::Mat *self, CvVec2b v)
{
    self->push_back(cv::Vec2b(v.val));
}
CVAPI(void) core_Mat_push_back_Vec3b(cv::Mat *self, CvVec3b v)
{
    self->push_back(cv::Vec3b(v.val));
}
CVAPI(void) core_Mat_push_back_Vec4b(cv::Mat *self, CvVec4b v)
{
    self->push_back(cv::Vec4b(v.val));
}
CVAPI(void) core_Mat_push_back_Vec6b(cv::Mat *self, CvVec6b v)
{
    self->push_back(cv::Vec6b(v.val));
}
CVAPI(void) core_Mat_push_back_Vec2s(cv::Mat *self, CvVec2s v)
{
    self->push_back(cv::Vec2s(v.val));
}
CVAPI(void) core_Mat_push_back_Vec3s(cv::Mat *self, CvVec3s v)
{
    self->push_back(cv::Vec3s(v.val));
}
CVAPI(void) core_Mat_push_back_Vec4s(cv::Mat *self, CvVec4s v)
{
    self->push_back(cv::Vec4s(v.val));
}
CVAPI(void) core_Mat_push_back_Vec6s(cv::Mat *self, CvVec6s v)
{
    self->push_back(cv::Vec6s(v.val));
}
CVAPI(void) core_Mat_push_back_Vec2w(cv::Mat *self, CvVec2w v)
{
    self->push_back(cv::Vec2w(v.val));
}
CVAPI(void) core_Mat_push_back_Vec3w(cv::Mat *self, CvVec3w v)
{
    self->push_back(cv::Vec3w(v.val));
}
CVAPI(void) core_Mat_push_back_Vec4w(cv::Mat *self, CvVec4w v)
{
    self->push_back(cv::Vec4w(v.val));
}
CVAPI(void) core_Mat_push_back_Vec6w(cv::Mat *self, CvVec6w v)
{
    self->push_back(cv::Vec6w(v.val));
}
CVAPI(void) core_Mat_push_back_Vec2i(cv::Mat *self, CvVec2i v)
{
    self->push_back(cv::Vec2i(v.val));
}
CVAPI(void) core_Mat_push_back_Vec3i(cv::Mat *self, CvVec3i v)
{
    self->push_back(cv::Vec3i(v.val));
}
CVAPI(void) core_Mat_push_back_Vec4i(cv::Mat *self, CvVec4i v)
{
    self->push_back(cv::Vec4i(v.val));
}
CVAPI(void) core_Mat_push_back_Vec6i(cv::Mat *self, CvVec6i v)
{
    self->push_back(cv::Vec6i(v.val));
}
CVAPI(void) core_Mat_push_back_Vec2f(cv::Mat *self, CvVec2f v)
{
    self->push_back(cv::Vec2f(v.val));
}
CVAPI(void) core_Mat_push_back_Vec3f(cv::Mat *self, CvVec3f v)
{
    self->push_back(cv::Vec3f(v.val));
}
CVAPI(void) core_Mat_push_back_Vec4f(cv::Mat *self, CvVec4f v)
{
    self->push_back(cv::Vec4f(v.val));
}
CVAPI(void) core_Mat_push_back_Vec6f(cv::Mat *self, CvVec6f v)
{
    self->push_back(cv::Vec6f(v.val));
}
CVAPI(void) core_Mat_push_back_Vec2d(cv::Mat *self, CvVec2d v)
{
    self->push_back(cv::Vec2d(v.val));
}
CVAPI(void) core_Mat_push_back_Vec3d(cv::Mat *self, CvVec3d v)
{
    self->push_back(cv::Vec3d(v.val));
}
CVAPI(void) core_Mat_push_back_Vec6d(cv::Mat *self, CvVec6d v)
{
    self->push_back(cv::Vec6d(v.val));
}
CVAPI(void) core_Mat_push_back_Point(cv::Mat *self, CvPoint v)
{
    self->push_back((cv::Point)v);
}
CVAPI(void) core_Mat_push_back_Point2f(cv::Mat *self, CvPoint2D32f v)
{
    self->push_back((cv::Point2f)v);
}
CVAPI(void) core_Mat_push_back_Point2d(cv::Mat *self, CvPoint2D64f v)
{
    self->push_back(cv::Point2d(v.x, v.y));
}
CVAPI(void) core_Mat_push_back_Point3i(cv::Mat *self, CvPoint3D v)
{
    self->push_back(cv::Point3i(v.x, v.y, v.z));
}
CVAPI(void) core_Mat_push_back_Point3f(cv::Mat *self, CvPoint3D32f v)
{
    self->push_back((cv::Point3f)v);
}
CVAPI(void) core_Mat_push_back_Point3d(cv::Mat *self, CvPoint3D64f v)
{
    self->push_back(cv::Point3d(v.x, v.y, v.z));
}
CVAPI(void) core_Mat_push_back_Size(cv::Mat *self, CvSize v)
{
    self->push_back((cv::Size)v);
}
CVAPI(void) core_Mat_push_back_Size2f(cv::Mat *self, CvSize2D32f v)
{
    self->push_back((cv::Size2f)v);
}
CVAPI(void) core_Mat_push_back_Rect(cv::Mat *self, CvRect v)
{
    self->push_back((cv::Rect)v);
}
typedef void *(Mat_foreach_uchar)(uchar *value, const int *position);
typedef void *(Mat_foreach_Vec2b)(cv::Vec2b *value, const int *position);
typedef void *(Mat_foreach_Vec3b)(cv::Vec3b *value, const int *position);
typedef void *(Mat_foreach_Vec4b)(cv::Vec4b *value, const int *position);
typedef void *(Mat_foreach_Vec6b)(cv::Vec6b *value, const int *position);
typedef void *(Mat_foreach_short)(short *value, const int *position);
typedef void *(Mat_foreach_Vec2s)(cv::Vec2s *value, const int *position);
typedef void *(Mat_foreach_Vec3s)(cv::Vec3s *value, const int *position);
typedef void *(Mat_foreach_Vec4s)(cv::Vec4s *value, const int *position);
typedef void *(Mat_foreach_Vec6s)(cv::Vec6s *value, const int *position);
typedef void *(Mat_foreach_int)(int *value, const int *position);
typedef void *(Mat_foreach_Vec2i)(cv::Vec2i *value, const int *position);
typedef void *(Mat_foreach_Vec3i)(cv::Vec3i *value, const int *position);
typedef void *(Mat_foreach_Vec4i)(cv::Vec4i *value, const int *position);
typedef void *(Mat_foreach_Vec6i)(cv::Vec6i *value, const int *position);
typedef void *(Mat_foreach_float)(float *value, const int *position);
typedef void *(Mat_foreach_Vec2f)(cv::Vec2f *value, const int *position);
typedef void *(Mat_foreach_Vec3f)(cv::Vec3f *value, const int *position);
typedef void *(Mat_foreach_Vec4f)(cv::Vec4f *value, const int *position);
typedef void *(Mat_foreach_Vec6f)(cv::Vec6f *value, const int *position);
typedef void *(Mat_foreach_double)(double *value, const int *position);
typedef void *(Mat_foreach_Vec2d)(cv::Vec2d *value, const int *position);
CVAPI(void) core_Mat_forEach_uchar(cv::Mat *m, Mat_foreach_uchar proc)
{
    Functor<Mat_foreach_uchar, uchar> functor(proc);
    m->forEach<uchar>(functor);
}
CVAPI(void) core_Mat_forEach_Vec2b(cv::Mat *m, Mat_foreach_Vec2b proc)
{
    Functor<Mat_foreach_Vec2b, cv::Vec2b> functor(proc);
    m->forEach<cv::Vec2b>(functor);
}
CVAPI(void) core_Mat_forEach_Vec3b(cv::Mat *m, Mat_foreach_Vec3b proc)
{
    Functor<Mat_foreach_Vec3b, cv::Vec3b> functor(proc);
    m->forEach<cv::Vec3b>(functor);
}
CVAPI(void) core_Mat_forEach_Vec4b(cv::Mat *m, Mat_foreach_Vec4b proc)
{
    Functor<Mat_foreach_Vec4b, cv::Vec4b> functor(proc);
    m->forEach<cv::Vec4b>(functor);
}
CVAPI(void) core_Mat_forEach_Vec6b(cv::Mat *m, Mat_foreach_Vec6b proc)
{
    Functor<Mat_foreach_Vec6b, cv::Vec6b> functor(proc);
    m->forEach<cv::Vec6b>(functor);
}
CVAPI(void) core_Mat_forEach_short(cv::Mat *m, Mat_foreach_short proc)
{
    Functor<Mat_foreach_short, short> functor(proc);
    m->forEach<short>(functor);
}
CVAPI(void) core_Mat_forEach_Vec2s(cv::Mat *m, Mat_foreach_Vec2s proc)
{
    Functor<Mat_foreach_Vec2s, cv::Vec2s> functor(proc);
    m->forEach<cv::Vec2s>(functor);
}
CVAPI(void) core_Mat_forEach_Vec3s(cv::Mat *m, Mat_foreach_Vec3s proc)
{
    Functor<Mat_foreach_Vec3s, cv::Vec3s> functor(proc);
    m->forEach<cv::Vec3s>(functor);
}
CVAPI(void) core_Mat_forEach_Vec4s(cv::Mat *m, Mat_foreach_Vec4s proc)
{
    Functor<Mat_foreach_Vec4s, cv::Vec4s> functor(proc);
    m->forEach<cv::Vec4s>(functor);
}
CVAPI(void) core_Mat_forEach_Vec6s(cv::Mat *m, Mat_foreach_Vec6s proc)
{
    Functor<Mat_foreach_Vec6s, cv::Vec6s> functor(proc);
    m->forEach<cv::Vec6s>(functor);
}
CVAPI(void) core_Mat_forEach_int(cv::Mat *m, Mat_foreach_int proc)
{
    Functor<Mat_foreach_int, int> functor(proc);
    m->forEach<int>(functor);
}
CVAPI(void) core_Mat_forEach_Vec2i(cv::Mat *m, Mat_foreach_Vec2i proc)
{
    Functor<Mat_foreach_Vec2i, cv::Vec2i> functor(proc);
    m->forEach<cv::Vec2i>(functor);
}
CVAPI(void) core_Mat_forEach_Vec3i(cv::Mat *m, Mat_foreach_Vec3i proc)
{
    Functor<Mat_foreach_Vec3i, cv::Vec3i> functor(proc);
    m->forEach<cv::Vec3i>(functor);
}
CVAPI(void) core_Mat_forEach_Vec4i(cv::Mat *m, Mat_foreach_Vec4i proc)
{
    Functor<Mat_foreach_Vec4i, cv::Vec4i> functor(proc);
    m->forEach<cv::Vec4i>(functor);
}
CVAPI(void) core_Mat_forEach_Vec6i(cv::Mat *m, Mat_foreach_Vec6i proc)
{
    Functor<Mat_foreach_Vec6i, cv::Vec6i> functor(proc);
    m->forEach<cv::Vec6i>(functor);
}
CVAPI(void) core_Mat_forEach_float(cv::Mat *m, Mat_foreach_float proc)
{
    Functor<Mat_foreach_float, float> functor(proc);
    m->forEach<float>(functor);
}
CVAPI(void) core_Mat_forEach_Vec2f(cv::Mat *m, Mat_foreach_Vec2f proc)
{
    Functor<Mat_foreach_Vec2f, cv::Vec2f> functor(proc);
    m->forEach<cv::Vec2f>(functor);
}
CVAPI(void) core_Mat_forEach_Vec3f(cv::Mat *m, Mat_foreach_Vec3f proc)
{
    Functor<Mat_foreach_Vec3f, cv::Vec3f> functor(proc);
    m->forEach<cv::Vec3f>(functor);
}
CVAPI(void) core_Mat_forEach_Vec4f(cv::Mat *m, Mat_foreach_Vec4f proc)
{
    Functor<Mat_foreach_Vec4f, cv::Vec4f> functor(proc);
    m->forEach<cv::Vec4f>(functor);
}
CVAPI(void) core_Mat_forEach_Vec6f(cv::Mat *m, Mat_foreach_Vec6f proc)
{
    Functor<Mat_foreach_Vec6f, cv::Vec6f> functor(proc);
    m->forEach<cv::Vec6f>(functor);
}
CVAPI(void) core_Mat_forEach_double(cv::Mat *m, Mat_foreach_double proc)
{
    Functor<Mat_foreach_double, double> functor(proc);
    m->forEach<double>(functor);
}
CVAPI(void) core_Mat_forEach_Vec2d(cv::Mat *m, Mat_foreach_Vec2d proc)
{
    Functor<Mat_foreach_Vec2d, cv::Vec2d> functor(proc);
    m->forEach<cv::Vec2d>(functor);
}